--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 
 .container {
   max-width: cover;
-  margin: 30px auto;
+  /* margin: 30px auto; */
   overflow: auto;
   max-height: cover;
   padding: 0px 0px 0px 220px;
